overflow hidden to fix scroll again

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@ body {
   margin: 0;
   max-width: 100%;
   background-color: #2f3136;
+  overflow: hidden;
 }
 
 * {
